bk_ida/gccida/c1/ix86_emit_save_regs_using_mov
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_emit_save_regs_using_mov/src/i386.c:4630:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), pointer); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_emit_save_regs_using_mov/src/i386.c:4631:30: error: use of undeclared identifier 'machine_mode'
v5 = adjust_address_1( v4, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), offset, 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_emit_save_regs_using_mov/src/i386.c:4632:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), i); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_emit_save_regs_using_mov/src/obj/i386.o] Error 1
